# football-manager-ita

./: C64-FIDELITY-FIXES.md  C64-FIDELITY-ISSUES.md  CLAUDE.md  CONVERSION_NOTES.md  Cargo.toml  DEBUGGING-STRATEGY.md  HOW-TO-PLAY.md  IMPLEMENTATION-SUMMARY.md  MS-BASIC-TOKENIZATION.md  NOTES.md  PARSING-GOTCHAS.md  README.md  RUNNING.md  RUST_TUI_README.md  TEST-REPORT.md  footballmanager.bas  footballmanager.prg  footballmanager_documented.txt  test.bas  test_simple.bas  test_simple.prg
basic-emulator/: Cargo.toml  PRG-FORMAT.md  README.md
basic-emulator/examples/: debug_1540.rs  debug_print.rs  debug_print_expr.rs  debug_to.rs  find_parse_error.rs  find_parse_error_detokenized.rs  inspect_program.rs  show_screen_output.rs  simple_for_test.rs  test_1740.rs  test_3100.rs  test_4000.rs  test_all_keywords.rs  test_c64_fidelity.rs  test_combo.rs  test_complex_print.rs  test_comprehensive.rs  test_exact_1700.rs  test_execution_detailed.rs  test_footballmanager.rs  test_footballmanager_runtime.rs  test_if_print.rs  test_input_simple.rs  test_interpreter.rs  test_line10.rs  test_line1080.rs  test_line1540.rs  test_line170.rs  test_line1700.rs  test_line_2010.rs  test_more_steps.rs  test_normalization.rs  test_or_norm.rs  test_parse_file.rs  test_parser.rs  test_poke.rs  test_prg_detokenizer.rs  test_printvar.rs  test_string_normalization.rs  test_thenprint.rs  (+3 more)
basic-emulator/src/: interpreter.rs  lib.rs  main.rs  parser.rs  prg_loader.rs  screen.rs  trace.rs  value.rs
src/: match_engine.rs  ui.rs
tui/: Cargo.toml
tui/src/: game_state.rs  main.rs  market.rs  player.rs  (+1 more)
